<resources>
    <string name="app_name">SnapGuard</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="welcome">Welcome Back</string>
    <string name="email">Enter Email</string>
    <string name="password">Enter Password</string>
    <string name="login">Login</string>
    <string name="new_user">New User?</string>
    <string name="forget_password">Forget Password?</string>
    <string name="image">image</string>

    <string name="welcome_to">Welcome to SnapGuard</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an Account? Login</string>
    <string name="authentication_required">Authentication Required</string>
    <string name="please_log_in_or_create_an_account">Please log in or create an account</string>
    <string name="welcome_to_the_forgetful_password_club_don_t_forget_your_password_or_do_it_s_a_club_tradition">Welcome to the Forgetful Password Club! Don\'t forget your password... or do, it\'s a club tradition! 😜</string>
    <string name="send_email">Send Email</string>
    <string name="log_out">Log out</string>
    <string name="profile">Profile</string>
    <string name="full_name">Full Name</string>
    <string name="email_">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="save_changes">Save Changes</string>
    <string name="edit_profile_photo">Edit Profile Photo</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="upload_image">Upload Image</string>
</resources>