<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    android:elevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="40dp"
        android:padding="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:text="@string/authentication_required"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/red"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_log_in_or_create_an_account"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="8dp"
            android:fontFamily="@font/poppins"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <Button
                android:id="@+id/btnCreateAccount"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/register"
                android:background="@drawable/drawable_background_button_blue_fill"
                android:layout_margin="8dp"/>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/login"
                android:layout_weight="1"
                android:background="@drawable/drawable_background_button_blue_fill"
                android:layout_margin="8dp"/>

        </LinearLayout>


    </LinearLayout>



</androidx.cardview.widget.CardView>