<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/fragment_login_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/image" />


    <TextView
        android:id="@+id/fragment_login_welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_login_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/atma_bold"
        android:text="@string/welcome"
        android:textColor="@color/blue"
        android:textSize="24sp"
        android:textStyle="bold" />


    <LinearLayout
        android:id="@+id/fragment_login_lin_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_below="@id/fragment_login_welcome_text">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_login_layout_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_person"
            app:startIconTint="@color/blue"
            android:layout_marginBottom="25dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fragment_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/fragment_login_layout_password"
            app:startIconDrawable="@drawable/ic_password"
            app:startIconTint="@color/blue"
            app:endIconMode="password_toggle"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            android:layout_marginBottom="25dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fragment_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:singleLine="true"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/fragment_login_btn_login"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/login"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:background="@drawable/drawable_background_button_blue_fill"
            android:layout_marginBottom="25dp"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fragment_login_new_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_user"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/fragment_login_forget_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forget_password"
                android:layout_gravity="end"
                android:gravity="end"
                android:textSize="18sp"
                android:textStyle="bold"/>


        </LinearLayout>




    </LinearLayout>

</RelativeLayout>

</ScrollView>