<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.ForgetPasswordFragment">


    <ImageView
        android:id="@+id/fragment_forget_password_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/image" />

    <TextView
        android:id="@+id/fragment_forget_password_welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/fragment_forget_password_logo"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome_to_the_forgetful_password_club_don_t_forget_your_password_or_do_it_s_a_club_tradition"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_margin="20dp"
        android:textAlignment="center"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:orientation="vertical"
        android:layout_below="@id/fragment_forget_password_welcome_text">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fragment_forget_password_layout_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_person"
            app:startIconTint="@color/blue"
            android:layout_marginBottom="25dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fragment_forget_password_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/fragment_forget_password_btn_send_email"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/send_email"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@drawable/drawable_background_button_blue_fill"
            android:layout_marginBottom="25dp"/>

    </LinearLayout>


</RelativeLayout>