<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProfileFragment">


    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/fragment_profile_profile_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/person"/>


    <LinearLayout
        android:id="@+id/fragment_profile_lin_0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/fragment_profile_profile_image">

        <TextView
            android:id="@+id/fragment_profile_edit_profile_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/edit_profile_photo"
            android:textSize="16sp"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/fragment_profile_upload_profile_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="10dp"
            android:text="@string/upload_image"
            android:textSize="16sp"
            android:textAlignment="center"
            android:visibility="gone"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragment_profile_lin_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="40dp"
        android:layout_below="@id/fragment_profile_lin_0">

        <LinearLayout
            android:id="@+id/fragment_profile_lin_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fragment_profile_name_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/full_name"
                style="@style/TextAppearance.AppCompat.Medium"
                android:paddingTop="10dp"
                android:paddingBottom="10dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fragment_profile_name_view"
                android:background="@drawable/drawable_background_input_field"
                android:maxLines="1"
                android:lineSpacingMultiplier="1.8"
                android:padding="8dp"
                android:hint="@string/full_name"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_profile_lin_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fragment_profile_email_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/email_"
                style="@style/TextAppearance.AppCompat.Medium"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fragment_profile_email_view"
                android:background="@drawable/drawable_background_input_field"
                android:maxLines="1"
                android:lineSpacingMultiplier="1.8"
                android:padding="8dp"
                android:hint="@string/email_"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragment_profile_lin_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fragment_profile_phone_number_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/phone_number"
                style="@style/TextAppearance.AppCompat.Medium"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fragment_profile_phone_number_view"
                android:background="@drawable/drawable_background_input_field"
                android:maxLines="1"
                android:lineSpacingMultiplier="1.8"
                android:padding="8dp"
                android:hint="@string/phone_number"/>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:id="@+id/fragment_profile_btn_edit_profile"
            android:textAllCaps="true"
            android:layout_marginTop="25dp"
            android:background="@drawable/drawable_background_button_blue_fill"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/fragment_profile_btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_changes"
            android:textAllCaps="true"
            android:layout_marginTop="25dp"
            android:visibility="gone"
            android:background="@drawable/drawable_background_button_blue_fill"
            android:textColor="@color/white"/>
    </LinearLayout>

</RelativeLayout>